# playingWithDL

./: A.cpp  B.cpp  C.cpp  CMakeLists.txt  dlHandler.cpp  dlHandler.hpp  loadPath.cxx  main.cxx  mopen.cxx  simpleRegister.cpp  simpleRegister.hpp
